2011-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, support/include/test_support.h:
	* support/src/locked_print.c: New file.

2011-04-27	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1784
	* sptests/spsize/size.c: Split bspsmp.h into two files smp.h and
	bspsmp.h

2011-04-21	Jennifer Averett <Jennifer.Averett@OARcorp.com

	PR 1777/cpukit
	* support/include/tmacros.h, tmtests/tm26/task1.c,
	tmtests/tm27/task1.c: Consolidated access to
	_Thread_Dispatch_disable_level.

2011-04-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Add fstests.

2011-03-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/env-rtemsbsp.m4, aclocal/rtems-top.m4, aclocal/version.m4:
	Rename RTEMS_API into _RTEMS_API.

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4:
	Stop pretending no_cpu* was buildable.
	Derive RTEMS_CPU from "$host_cpu".
	Error out if "$host" doesn't match "*-*-rtems*".

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/src/tmtests_support.c: 
	loop_overhead and end_time are uint32_t's.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/src/spin.c, support/src/test_support.c,
	support/src/tmtests_empty_function.c, support/src/tmtests_support.c:
	Add HAVE_CONFIG_H.

2011-02-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h: Remove PRIxblksize_t, PRIxblkcnt_t.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Add initial small set of POSIX Timing Tests.

2010-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1708/build:
	* aclocal/check-cpuopts.m4: Fix m4-quoting.

2010-09-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-cpuopts.m4: Add AC_LANG_SOURCE.

2010-07-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* automake/compile.am: Remove clean-local:.